add axion release